--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,4 @@
 body {
-    /* background-image: url("..images/sports.png"); */
-    background-color: black;
-    width: 500px;
-    font-family: 'Poppins', sans-serif;
-    color: white;
-
-}
-
-#startScreen {
-    border: 3px solid white;
-    background-color: darkgreen;
-    color: white;
-    padding: 100px;
-    width: 130%;
-    align-content: center;
-    margin-left: 157px;
-    margin-top: 100px;
-
-
-}
-
-.header {
-    font-size: 70px;
-    margin-left: 5px;
-}
-
-#startButton {
-    width: 50%;
-    font-weight: bold;
-    font-size: 40px;
-    margin-left: 156px;
-    background-color: black;
-    color: white;
-    border: 5px solid white;
-    padding: 10px;
-}
-
-#startButton:hover {
-    background-color: red;
-
-}
-
-#gameContainer {
-    border: 3px solid white;
-    background-color: darkgreen;
-    color: white;
-    padding: 100px;
-    width: 130%;
-    align-content: center;
-    margin-left: 157px;
-    margin-top: 100px;
-}
-
-#endGame {
-    border: 3px solid white;
-    background-color: darkgreen;
-    color: white;
-    padding: 100px;
-    width: 130%;
-    align-content: center;
-    margin-left: 157px;
-    margin-top: 100px;
-}
+/* background-image: url("https://goo.gl/images/f1PFdt"); */
+background-color: darkgreen;
+};
